@@ -1,3 +1,9 @@
+2005-06-07  Benjamin Kosnik  <bkoz@redhat.com>
+
+	* acinclude.m4 (GLIBCXX_ENABLE_C99): Use C++ compiler for complex
+	tests.
+	* configure: Regenerated.
+
 2005-06-07  Adrian Straetling  <straetling@de.ibm.com>
 
 	* config/cpu/s390/atomicity.h: (__exchange_and_add, 
